fixed some alignment problems with text and peach

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,9 +23,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #f8f1f1;
-  background-color: #eeb266;
-  background: url("./images/peach.png") #404f73 no-repeat;
-  background-position: center;
 }
 
 code {
