--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,7 @@
 .main-background {
   max-width: 1200px;
   margin: 0 auto;
+  background-color: #eeb266;
+  background: url("../images/peach.png") #404f73 no-repeat;
+  background-position-y: 173px;
 }
