--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -2,4 +2,7 @@ footer {
   flex: 0 0 100%;
   background-color: #2f4858;
   min-height: 10vh;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
 }
